src/objects/MDM_PRODUCT_X_SourceID__c.object
<CustomObject>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <label>EnterpriseID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <label>Source System ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MDM_PRODUCT_X_SourceIDs</label>
    <nameField>
        <label>MDM_PRODUCT_X_SourceIDs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_GRID_X_SourceIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>